# scrape

./: prefect.yaml  pyproject.toml  requirements.txt  scrape.py
